<resources>
    <string name="app_name">Quiz App</string>
    <string name="quiz_app">Quiz App</string>
    <string name="excel_your_knowledge_by_n_participating_in_contests">Excel your knowledge by\nparticipating in contests !</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_using">Sign up using</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="participate_in_contests_nexcel_your_knowledge">Participate in contests\nExcel your knowledge</string>
    <string name="mobile_no_or_email">Mobile no or Email</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_number">Enter number</string>
    <string name="don_t_have_an_account_tsign_up">Don\'t have an account ?\t</string>
    <string name="hello">Hello</string>
    <string name="welcome_to_quiz_app_all_in_one_nplatform_to_improve_your_knowledge">Welcome to Quiz App, where\nyou can participate in quizzes and\nimprove your knowledge.\n\n</string>
    <string name="or">Or</string>
    <string name="don_t_have_an_account_tno_worry">Don\'t have an account?\tNo worry</string>
    <string name="create_new_account">Create new account</string>
    <string name="create_an_account_to_participate_in_quize_tests_and_teachers_can_set_quizzes">Create an account to participate in quiz tests and teachers can set quizzes.</string>
    <string name="username">Username</string>
    <string name="enter_name">Enter name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="already_have_an_account_tlog_in">Already have an account?\t</string>
    <string name="create_account">Create account</string>
    <string name="category">Categories -></string>
    <string name="c_programming">C\nprogramming</string>
    <string name="cplus_programming">C++\nprogramming</string>
    <string name="computer_narchitecture">Computer\nArchitecture</string>
    <string name="digital_logic_n_tdesign">Digital Logic\nDesign</string>
    <string name="accounting">Accounting</string>
    <string name="oop">OOP</string>
    <string name="question_no">Question no\t</string>
    <string name="submit_answer">Submit answer</string>
    <string name="correct_answer_t">Correct answer\t:</string>
    <string name="score">Score\t:</string>
    <string name="next">Next</string>
    <string name="welcome_admin">Welcome Admin !!!</string>
    <string name="what_do_you_want_to_do">What do you want to do today ???</string>
    <string name="create_new_category">Create new Category</string>
    <string name="make_changes_in_existing_categories">Make changes in existing Categories</string>
    <string name="see_existing_categories">See existing Categories</string>
    <string name="create_new_category_"><![CDATA[Create new category ->]]></string>
    <string name="name">Name</string>
    <string name="number_of_questions">Number of Questions</string>
    <string name="create">Create</string>
    <string name="category_name">Category name</string>
    <string name="type">Type</string>
    <string name="todo">TODO</string>
    <string name="upload_picture_here"><![CDATA[Upload picture here ->]]></string>
    <string name="tto_continue_to_app">\tto continue to app !</string>
    <string name="_1">1</string>
    <string name="questions"><![CDATA[Questions ->]]></string>
    <string name="create_question"><![CDATA[Add question ->]]></string>
    <string name="enter_question">Enter question</string>
    <string name="option_1">Option 1</string>
    <string name="enter_option_1">Enter option 1</string>
    <string name="enter_option_4">Enter option 4</string>
    <string name="enter_option_3">Enter option 3</string>
    <string name="enter_option_2">Enter option 2</string>
    <string name="add">Add</string>
    <string name="which_option_is_correct">Which option is correct</string>
    <string name="submit">Submit</string>
    <string name="finish">Finish</string>
    <string name="correct_answer">Correct answer</string>
    <string name="done">Done</string>
    <string name="see_all_categories">See all categories</string>
    <string name="log_out">Log Out</string>
    <string name="enter_number_or_mail_id">Enter number or mail id</string>
    <string name="total_correct_answers_0">Total Correct Answers: 0</string>
    <string name="continue_to_app">Continue to app</string>
    <string name="enter_email">Enter email</string>
    <string name="default_web_client_id" >567498252937-u59kkr7uu614gp2u0un5d6mg9fc7dpdq.apps.googleusercontent.com</string>
</resources>