<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="50dp"
    android:gravity="center"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/quiz_app"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_marginBottom="5dp"
        android:textColor="@color/black"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/participate_in_contests_nexcel_your_knowledge"
        android:textSize="15sp"
        android:textAlignment="center"
        android:layout_marginBottom="25dp"
        android:textColor="@color/black"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mobile_no_or_email"
        android:textSize="15sp"
        android:layout_marginBottom="3dp"
        android:textColor="@color/black"
        />

    <EditText
        android:id="@+id/et_email_mobile"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/enter_number_or_mail_id"
        android:autofillHints="emailAddress"
        android:inputType="text"
        android:layout_marginBottom="10dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textSize="15sp"
        android:layout_marginBottom="3dp"
        android:textColor="@color/black"
        />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:layout_marginBottom="15dp"

        />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:layout_marginBottom="20dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account_tsign_up"
            android:textSize="15sp"
            android:textColor="@color/black"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textSize="15sp"
            android:id="@+id/tv_signup"
            android:onClick="clickedSignup"
            android:textColor="#2196F3"
            android:textStyle="bold"
            />

    </LinearLayout>

</LinearLayout>