<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="50dp"
    android:layout_gravity="center"
    tools:context=".CreateAccount">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_new_account"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_marginBottom="5dp"
        android:textColor="@color/black"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_an_account_to_participate_in_quize_tests_and_teachers_can_set_quizzes"
        android:textSize="15sp"
        android:textAlignment="center"
        android:layout_marginBottom="25dp"
        android:textColor="@color/black"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_email"
        android:textSize="15sp"
        android:layout_marginBottom="3dp"
        android:textColor="@color/black"
        />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        android:layout_marginBottom="10dp"
        tools:ignore="TextFields" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textSize="15sp"
        android:layout_marginBottom="3dp"
        android:textColor="@color/black"
        />

    <EditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/enter_name"
        android:inputType="text"
        android:layout_marginBottom="10dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textSize="15sp"
        android:layout_marginBottom="3dp"
        android:textColor="@color/black"
        />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/enter_password"
        android:autofillHints="password"
        android:inputType="textPassword"
        android:layout_marginBottom="15dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm_password"
        android:textSize="15sp"
        android:layout_marginBottom="3dp"
        android:textColor="@color/black"
        />

    <EditText
        android:id="@+id/et_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/confirm_password"
        android:autofillHints="password"
        android:inputType="textPassword"
        android:layout_marginBottom="15dp"

        />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/create_account"
        android:layout_marginBottom="20dp"
        android:onClick="clickedSignup"
        android:textStyle="bold"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account_tlog_in"
            android:textSize="15sp"
            android:textColor="@color/black"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_in"
            android:textSize="15sp"
            android:id="@+id/tv_login"
            android:onClick="clickedLogin"
            android:textColor="#03A9F4"
            android:textStyle="bold"
            />

    </LinearLayout>

</LinearLayout>