<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateQuestions"
    android:orientation="vertical"
    android:padding="20dp"
    android:gravity="center">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_question"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_marginBottom="16dp"
        android:padding="10dp"
        android:textColor="@color/black"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_question"
        android:autofillHints="name"
        android:padding="10dp"
        android:inputType="text"
        android:textSize="24sp"
        android:layout_marginBottom="10dp"
        android:id="@+id/et_question"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_option_1"
        android:autofillHints="name"
        android:padding="10dp"
        android:inputType="text"
        android:textSize="24sp"
        android:layout_marginBottom="10dp"
        android:id="@+id/et_option_1"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_option_2"
        android:autofillHints="name"
        android:padding="10dp"
        android:inputType="text"
        android:textSize="24sp"
        android:layout_marginBottom="10dp"
        android:id="@+id/et_option_2"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_option_3"
        android:autofillHints="name"
        android:padding="10dp"
        android:inputType="text"
        android:textSize="24sp"
        android:layout_marginBottom="10dp"
        android:id="@+id/et_option_3"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_option_4"
        android:autofillHints="name"
        android:padding="10dp"
        android:inputType="text"
        android:textSize="24sp"
        android:layout_marginBottom="20dp"
        android:id="@+id/et_option_4"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/correct_answer"
        android:autofillHints="name"
        android:padding="10dp"
        android:inputType="text"
        android:textSize="24sp"
        android:layout_marginBottom="20dp"
        android:id="@+id/et_correct_option"
        />

    <Button
        android:layout_width="192dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:padding="20dp"
        android:text="@string/add"
        android:textSize="20sp"
        android:layout_gravity="right"
        android:id="@+id/btn_add"
        tools:ignore="RtlHardcoded"
        android:textStyle="bold"
        />

</LinearLayout>