<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateNewCategory"
    android:orientation="vertical"
    android:padding="20dp"
    android:gravity="center">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_new_category_"
        android:textAlignment="center"
        android:textSize="23sp"
        android:textStyle="bold"
        android:layout_marginBottom="16dp"
        android:textColor="@color/black"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/category_name"
        android:autofillHints="name"
        android:padding="10dp"
        android:inputType="text"
        android:textSize="24sp"
        android:layout_marginTop="10dp"
        android:id="@+id/et_name"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/type"
        android:autofillHints="name"
        android:padding="10dp"
        android:inputType="text"
        android:textSize="24sp"
        android:layout_marginTop="10dp"
        android:id="@+id/et_type"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/number_of_questions"
        android:autofillHints="name"
        android:padding="10dp"
        android:inputType="number"
        android:textSize="24sp"
        android:layout_marginTop="10dp"
        android:id="@+id/et_number_question"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/upload_picture_here"
        android:textSize="20sp"
        android:padding="10dp"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        />
    
    <ImageView
        android:layout_width="192dp"
        android:layout_height="192dp"
        android:layout_marginTop="15dp"
        android:scaleType="fitCenter"
        android:src="@drawable/upload_image2"
        android:id="@+id/iv_upload_img"
        android:contentDescription="@string/todo" />

    <Button
        android:layout_width="192dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="20dp"
        android:text="@string/create"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_gravity="right"
        android:id="@+id/btn_create_new"
        tools:ignore="RtlHardcoded" />

</LinearLayout>