<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="50dp"
    tools:context=".WelcomeActivity">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/quiz_app"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/black"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_quiz_app_all_in_one_nplatform_to_improve_your_knowledge"
        android:textAlignment="center"
        android:textSize="15sp"
        android:padding="5dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_in"
            android:textSize="15sp"
            android:id="@+id/tv_login"
            android:onClick="clickedLogin"
            android:textColor="#03A9F4"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tto_continue_to_app"
            android:textSize="15sp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account_tsign_up"
            android:textSize="15sp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textSize="15sp"
            android:id="@+id/tv_signup"
            android:onClick="clickedSignup"
            android:textColor="#2196F3"
            android:textStyle="bold"
            />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:text="@string/or"
        android:textAlignment="center"
        android:textSize="15sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_using"
        android:textAlignment="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageView
            android:id="@+id/iv_google"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/icons_google"
            android:padding="5dp"
            android:onClick="signUpGoogle"/>

        <ImageView
            android:id="@+id/iv_facebook"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/icons_facebook"
            android:padding="5dp"
            android:onClick="signUpFacebook"/>

        <ImageView
            android:id="@+id/iv_twitter"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/icons_twitter"
            android:padding="5dp"
            android:onClick="signUpTwitter"/>

    </LinearLayout>

</LinearLayout>