<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminDashBoard"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_admin"
        android:textStyle="bold"
        android:textSize="32sp"
        android:layout_marginBottom="16dp"
        android:textColor="@color/black"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/what_do_you_want_to_do"
        android:textSize="22sp"
        android:padding="8dp"
        android:layout_marginBottom="32dp"
        android:textColor="@color/black"
        />

    <Button
        android:id="@+id/btn_existing_categories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/see_all_categories"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="16sp"
        />

    <Button
        android:id="@+id/btn_new_categories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_new_category"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="16sp"
        />

    <Button
        android:id="@+id/btn_log_out"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/log_out"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textAllCaps="false"
        />

</LinearLayout>